--- a/sass/_sortable.sass
+++ b/sass/_sortable.sass
@@ -20,30 +20,33 @@
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
             -webkit-touch-callout: none
             cursor: pointer
+            position: relative
 
         th
 
-            &:after
-                content: ""
-                visibility: hidden
-                display: inline-block
-                vertical-align: inherit
-                height: 0
-                width: 0
-                border-width: 5px
-                border-style: solid
-                border-color: transparent
-                margin-right: 1px
-                margin-left: 10px
-                float: right
+            //&:after
+            &[data-sorted="false"]:after
+                opacity: 0.2
+                content: "\e150"
+                position: absolute
+                top: 8px
+                right: 8px
+                display: block
+                font-family: 'Glyphicons Halflings'
+                visibility: visible
 
             &[data-sorted="true"]:after
+                position: absolute
+                top: 8px
+                right: 8px
+                display: block
+                font-family: 'Glyphicons Halflings'
                 visibility: visible
 
             &[data-sorted-direction="descending"]:after
-                border-top-color: inherit
-                margin-top: 8px
+                opacity: 0.5
+                content: "\e156"
 
             &[data-sorted-direction="ascending"]:after
-                border-bottom-color: inherit
-                margin-top: 8px - 5px
+                opacity: 0.5
+                content: "\e155"
